--- a/index.html
+++ b/index.html
@@ -1,2 +1,49 @@
-How are you, Welcome to apparel quizzes!
-Lets get started
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>David - MSI Computer Camps</title>
+  <link rel="stylesheet" type="text/css" href="./assets/styles.css" />
+</head>
+
+<body>
+  <div class="header">
+    <a href="https://www.compcamps.com">
+      <img alt="msi logo" src="./assets/logo.svg" height="24px" />
+    </a>
+    <a href="./index.html">Home</a>
+    <a href="./about.html">About me</a>
+  </div>
+  <article>
+    <h1>Hello Compcamps!</h1>
+    <p>Welcome to my site!</p>
+    <div>this is block</div>
+    <span>Made by Jal</span>
+    <b>this is inline</b>
+    <i>italics</i>
+    <h2>Unreal project</h2>
+    <video controls width="100%">
+      <source src="./assets/before-unreal.mp4" type="video/mp4" />
+      Sorry this video doesn't work
+    </video>
+    <h2>Guessing Game</h2>
+    <video controls width="100%">
+      <source src="./assets/JALVIDEOPROject.mp4" type="video/mp4" />
+      Sorry this video doesn't work
+    </video>
+    <h2>Guessing Game Code</h2>
+    <img alt="First Screenshot Of Code" src="./assets/Ss1Project.png" width="100%" />
+    <img alt="Second Screenshot Of Code" src="./assets/ss2Project.png" width="100%" />
+  </article> 
+  <script>
+    const name = window.prompt('What is your name?')
+    document.querySelector(
+      'h1'
+    ).innerText = "Hello " + name  +'!'
+  </script>
+</body>
+
+</html>
